# hedwig-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: hedwig.yml
examples/: googlepubsub.rs  publish.rs  redis-debug.rs  redis.rs
hedwig_core/: Cargo.toml
hedwig_core/src/: lib.rs  message.rs
src/: consumer.rs  dbg_count.rs  google_publisher.rs  lib.rs  message.rs  mock_publisher.rs  null_publisher.rs  publisher.rs  publishers.rs  sink.rs  tests.rs  topic.rs  validators.rs
src/backends/: mock.rs  mod.rs  redis.rs
src/backends/googlepubsub/: consumer.rs  mod.rs  publisher.rs
src/backends/redis/: consumer.rs  mod.rs  publisher.rs
src/consume/: mod.rs
src/publish/: mod.rs  sink.rs
src/publish/publishers/: googlepubsub.rs  mock.rs  mod.rs  null.rs
src/publishers/: googlepubsub.rs  mock.rs  null.rs
src/tests/: google.rs  json.rs  mod.rs
src/validators/: json_schema.rs  mod.rs  prost.rs
tests/: google-key.json
